--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>Welcome to the Skateboard API!</h1>
+    <p>An ongoing project to catalog who created our favorite tricks.</p>
 
 
     
